src/scss/_breadcrumbs.scss
.breadcrumbs {
  flex: 1 1 100%;
  color: var(--fg-700);
  text-align: center;
  line-height: 1.4;

  @include bp(tablet) {
    text-align: left;
  }

  li {
    display: inline-block;

    &:not(:last-child) {
      &::after {
        content: '/';
        display: inline-block;
        margin: 0 .4rem 0 .3rem;
      }
    }
  }
}

